--- a/main.html
+++ b/main.html
@@ -8,7 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
     <script type="text/javascript" src="./script.js">
+		<a href="https://youtu.be/-vzZ50Rijm8">fav song</a>
+		</div>
 </script>
 
 </body>
