--- a/main.html
+++ b/main.html
@@ -9,10 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-    <script type="text/javascript" src="./script.js">
-		<a href="https://youtu.be/-vzZ50Rijm8">fav song</a>
-		</div>
-</script>
+<!-- 		<p>My current favourite song is</p> -->
+		<a href="https://youtu.be/-vzZ50Rijm8">My current favourite song is</a>
+	</div>
 
 </body>
 
